--- a/Events.html
+++ b/Events.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap carousel</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-12" data-rv-view="43" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/i">build a website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-12" data-rv-view="43" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -80,7 +80,7 @@
                             <h3 class="mbr-section-title display-2">High School New Student Orientation</h3>
 
                             <div class="mbr-section-text">
-                                <p>A description of orientation and how it went.</p>
+                                <p>A description of orientation and how it went, containing two reactions from new students.</p>
                             </div>
 
                             <div class="mbr-section-btn"><a class="btn btn-secondary" href="page20.html">MORE</a></div>
