--- a/page25.html
+++ b/page25.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-6g" data-rv-view="645" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 80px;">
+<section class="engine"><a href="https://mobirise.co/a">website builder</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-6g" data-rv-view="645" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 80px;">
 
     
     <div class="container">
@@ -113,12 +113,12 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-6m" data-rv-view="658" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-6s" data-rv-view="796" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
                 <figure class="mbr-figure">
-                    <div><img src="assets/images/img-1400x1050.jpg"></div>
+                    <div><img src="assets/images/img-1400x1050.png"></div>
 
                     <figcaption class="mbr-figure-caption mbr-figure-caption-over">
                         <div class="container">The GAIA group, which, if you multiply this number by 8, looks more like what its first meeting with new members looked like on Wednesday at lunch.</div>
