--- a/page25.html
+++ b/page25.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/k">free bootstrap templates</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-6g" data-rv-view="645" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 80px;">
+<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-6g" data-rv-view="645" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 80px;">
 
     
     <div class="container">
@@ -84,6 +84,23 @@
         </div>
     </div>
 
+</section>
+
+<section class="mbr-section mbr-section__container" id="image2-6t" data-rv-view="834" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <figure class="mbr-figure">
+                    <div><img src="assets/images/img-1400x1050.jpg"></div>
+
+                    <figcaption class="mbr-figure-caption mbr-figure-caption-over">
+                        <div class="container">This is the dance group.</div>
+                    </figcaption>
+
+                </figure>
+            </div>
+        </div>
+    </div>
 </section>
 
 <section class="mbr-section article mbr-section__container" id="content1-6j" data-rv-view="652" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
