--- a/Comedy.html
+++ b/Comedy.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-t" data-rv-view="96" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/d">free website software</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-t" data-rv-view="96" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -87,7 +87,7 @@
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 50%;">
-                            <div class="mbr-figure"><img src="assets/images/img-1400x1050.jpg"></div>
+                            <div class="mbr-figure"><img src="assets/images/img-600x450.jpg"></div>
                         </div>
 
                     </div>
